--- a/requirements.txt
+++ b/requirements.txt
@@ -151,7 +151,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.2.1
 pytz==2024.2
-pywin32==308
+# pywin32==308  # Consider removing if causing issues
 pywinpty==2.0.14
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -199,10 +199,4 @@ uvicorn==0.34.0
 watchdog==6.0.0
 watchfiles==1.0.4
 wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==14.2
-wrapt==1.17.2
-yarl==1.18.3
-zipp==3.21.0
+web
