--- a/requirements.txt
+++ b/requirements.txt
@@ -151,7 +151,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.2.1
 pytz==2024.2
-# pywin32==308  # Consider removing if causing issues
+pywin32==308
 pywinpty==2.0.14
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -164,9 +164,10 @@ rfc3986-validator==0.1.1
 rich==13.9.4
 rpds-py==0.22.3
 rsa==4.9
+scipy==1.15.1
 Send2Trash==1.8.3
 sentencepiece==0.2.0
-setuptools==75.6.0
+setuptools==75.8.0
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
@@ -199,4 +200,11 @@ uvicorn==0.34.0
 watchdog==6.0.0
 watchfiles==1.0.4
 wcwidth==0.2.13
-web
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==14.2
+wheel==0.45.1
+wrapt==1.17.2
+yarl==1.18.3
+zipp==3.21.0
